--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
+    <!-- <header>
       <div class="container">
         <h1><span>2</span><span>0</span><span>4</span><span>8</span></h1>
         <p class="inspired">
@@ -18,14 +18,14 @@
           >.
         </p>
       </div>
-    </header>
+    </header> -->
     <div class="container">
-      <div class="directions">
+      <!-- <div class="directions">
         <p>
           <strong>HOW TO PLAY:</strong> Use your arrow keys to move the tiles.
           When two tiles slide into each other, they merge into one!
         </p>
-      </div>
+      </div> -->
       <div class="scores">
         <div class="score-container best-score">
           best:
