--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
         <div id="tile-container" class="tile-container"></div>
         <div class="end" id="end">
           Game Over
-          <div class="monkey">🙈</div>
+          <div class="monkey">
+            <img
+              src="https://media.tenor.com/images/8d63484c68a8328f419c0c9ea5b94fb2/tenor.gif"
+            />
+          </div>
+
           <button
             class="btn not-recommended__item js-restart-btn"
             id="try-again"
           >
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
             Try Again
           </button>
         </div>
