optimized bubble score

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   </head>
   <body>
     <div class="container">
+      <div
+        style="
+          border-radius: 50%;
+          position: absolute;
+          top: 100px;
+          width: 100px;
+          height: 100px;
+          background-image: url('/assets/bubble.png');
+        "
+      ></div>
       <div class="scores">
         <div class="score-container best-score">
           best:
