changes in scoreboard

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
       ></div>
       <div class="scores">
         <div class="score-container best-score">
-          best:
+          <span class="rainbow-text">High-Score:</span>
           <div class="score">
             <div id="bestScore">0</div>
           </div>
         </div>
         <div class="score-container">
-          score:
+          <span class="rainbow-text">score:</span>
+
           <div class="score">
             <div id="score">0</div>
           </div>
@@ -48,7 +49,7 @@
             class="btn not-recommended__item js-restart-btn"
             id="try-again"
           >
-            Try Again
+            <span class="rainbow-text">Try Again</span>
           </button>
         </div>
       </div>
