--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <div class="game">
         <div id="tile-container" class="tile-container"></div>
         <div class="end" id="end">
-          Game Over
+          <!-- <span class="rainbow-text">Game over</span> -->
+          Game over
           <div class="monkey">
             <img
               src="https://media.tenor.com/images/8d63484c68a8328f419c0c9ea5b94fb2/tenor.gif"
@@ -44,7 +45,8 @@
             class="btn not-recommended__item js-restart-btn"
             id="try-again"
           >
-            <span class="rainbow-text">Try Again</span>
+            <!-- <span class="rainbow-text">Try Again</span> -->
+            Try Again
           </button>
         </div>
       </div>
