--- a/game.html
+++ b/game.html
@@ -16,13 +16,13 @@
     <div class="container">
       <div class="scores">
         <div class="score-container best-score">
-          <span class="rainbow-text">High-Score:</span>
+          <span class="rainbow-text">High Score:</span>
           <div class="score">
             <div id="bestScore">0</div>
           </div>
         </div>
         <div class="score-container">
-          <span class="rainbow-text">score:</span>
+          <span class="rainbow-text">Score:</span>
 
           <div class="score">
             <div id="score">0</div>
