--- a/game.html
+++ b/game.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DJP-2048</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="./assets/favicon.ico" />
     <!--       Font-awesome Link        -->
     <script
       src="https://kit.fontawesome.com/a1c21ab3f6.js"
