--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./assets/favicon.ico" />
 
     <style>
       body {
@@ -76,6 +77,10 @@
       .play-btn:hover {
         font-size: 3.5rem;
       }
+      .fa-play {
+        position: relative;
+        left: 2%;
+      }
       @media screen and (min-width: 1900px) {
         .play-btn {
           left: calc(46.5%);
@@ -87,7 +92,7 @@
       src="https://kit.fontawesome.com/a1c21ab3f6.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>DJP-2048</title>
   </head>
   <body>
     <!-- Edit the text with whatever you want :) -->
