--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        transition: 0.5s;
       }
       .play-btn:hover {
         font-size: 3.5rem;
