--- a/game.html
+++ b/game.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DJP-2048</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./assets/favicon.ico" />
     <!--       Font-awesome Link        -->
     <script
       src="https://kit.fontawesome.com/a1c21ab3f6.js"
@@ -103,6 +102,7 @@
         <button
           class="res-btn not-recommended__item js-restart-btn"
           id="restart"
+          onclick="playGeneralMusic()"
         >
           <i class="fas fa-redo fa-flip-horizontal"></i>
         </button>
