--- a/game.html
+++ b/game.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
+    <title>DJP 2048</title>
+    <link
+      rel="shortcut icon"
+      href="./assets/2048 Logo.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./style.css" />
     <!--       Font-awesome Link        -->
     <script
@@ -59,10 +63,9 @@
             <h2>HOW TO PLAY</h2>
           </div>
           <div class="modal-body">
-            <p>
-              Use your arrow keys to move the tiles. When two tiles slide into
-              each other, they merge into one!
-            </p>
+            <p>Use arrow keys to move the tiles.</p>
+            <p>Merge 2 tiles of same number to add them up.</p>
+            <p>Make a 2048 to win!</p>
             <div class="info-div">
               <div class="info-div-row">
                 Press
@@ -72,7 +75,7 @@
                 >
                   <i class="fas fa-redo fa-flip-horizontal"></i>
                 </div>
-                to Restart the game.
+                to Restart the Game.
               </div>
               <div class="info-div-row">
                 Press
@@ -82,7 +85,7 @@
                 >
                   <i class="fas fa-volume-down"></i>
                 </div>
-                to turn off the sound.
+                to Mute the Game Sound.
               </div>
               <div class="info-div-row">
                 Press
@@ -92,7 +95,7 @@
                 >
                   i
                 </div>
-                to get the Instructions.
+                for Instructions.
               </div>
             </div>
           </div>
