semi-final changes

--- a/game.html
+++ b/game.html
@@ -64,7 +64,7 @@
           </div>
           <div class="modal-body">
             <p>Use arrow keys to move the tiles.</p>
-            <p>Merge 2 tiles of same number to add them up.</p>
+            <p>Merge 2 tiles of same no to add them up.</p>
             <p>Make a 2048 to win!</p>
             <div class="info-div">
               <div class="info-div-row">
