--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         bottom: 90px;
         left: calc(50% - 50px);
         /* background-image: url("assets/bubble.png"); */
-        border: 3px solid white;
+        border: 5px solid white;
         background-size: cover;
         border-radius: 50%;
         font-size: 2rem;
@@ -66,9 +66,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: 0.075s;
+        transition: 0.05s;
       }
       .play-btn:hover {
+        color: rgb(215, 215, 215);
+        border: 5px solid rgb(215, 215, 215);
         font-size: 2.2rem;
       }
 
