final depoying changes

--- a/game.html
+++ b/game.html
@@ -83,7 +83,7 @@
                   class="res-btn not-recommended__item js-restart-btn"
                   id="restart"
                 >
-                  <i class="fas fa-volume-down"></i>
+                  <i class="fas fa-volume-down up"></i>
                 </div>
                 to Mute the Game Sound.
               </div>
