--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         background: black;
         width: 100vw;
         height: 100vh;
-        background-image: url("https://cdn.discordapp.com/attachments/871308833790779443/871430633988186152/background2.png");
+        background-image: url("https://github.com/NOOBUV/2048-game/blob/main/rm380-02.jpg");
       }
       input {
         width: 250px;
